# python_sqlite3_project

./: README.md  groceries.db  myapp.py  pyproject.toml
static/css/: Home.css  Plans.css  Users.css  nicepage.css
templates/: base.html  index.html  items.html  plans.html  user_page.html  users.html
