[tool.poetry]
name = "python_sqlite3_project"
version = "0.1.0"
description = ""
authors = ["yuhan.h <56543883+hyh116754@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
